# ChangeLog for app-crypt/bcwipe
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/bcwipe/ChangeLog,v 1.38 2009/06/02 17:03:04 armin76 Exp $

  02 Jun 2009; Raúl Porcel <armin76@gentoo.org> bcwipe-1.9.1.ebuild:
  sparc stable wrt #271910

  31 May 2009; Markus Meier <maekke@gentoo.org> bcwipe-1.9.1.ebuild:
  amd64/x86 stable, bug #271910

  31 May 2009; nixnut <nixnut@gentoo.org> bcwipe-1.9.1.ebuild:
  ppc stable #271910

*bcwipe-1.9.1 (30 Apr 2009)

  30 Apr 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -bcwipe-1.7_p2.ebuild, +bcwipe-1.9.1.ebuild,
  +files/bcwipe-1.9.1-fix_warnings.patch:
  Version bump (bug #267817).

  26 Apr 2009; Brent Baude <ranger@gentoo.org> bcwipe-1.7_p7.ebuild:
  stable ppc, bug 266807

  26 Apr 2009; Raúl Porcel <armin76@gentoo.org> bcwipe-1.7_p7.ebuild:
  sparc stable wrt #266807

  23 Apr 2009; Markus Meier <maekke@gentoo.org> bcwipe-1.7_p7:
  amd64/x86 stable, bug #266807

*bcwipe-1.7_p7 (21 Mar 2009)

  21 Mar 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -files/bcwipe-1.6_p8-qa.patch, +files/bcwipe-1.7_p7-build.patch,
  +bcwipe-1.7_p7.ebuild:
  Version bump. Respect CFLAGS and LDFLAGS (bug #239967).

  09 Apr 2008; Alon Bar-Lev <alonbl@gentoo.org> bcwipe-1.7_p2.ebuild:
  Fix license reference, bug#216864, thanks to Philippe Chaintreuil

  22 Mar 2008; Alon Bar-Lev <alonbl@gentoo.org> -bcwipe-1.6_p8.ebuild:
  Cleanup

  22 Mar 2008; nixnut <nixnut@gentoo.org> bcwipe-1.7_p2.ebuild:
  Stable on ppc wrt bug 207547

  21 Mar 2008; Ferris McCormick <fmccor@gentoo.org> bcwipe-1.7_p2.ebuild:
  Sparc stable, Bug #207547.  Test (silently) passes.

  21 Mar 2008; Markus Meier <maekke@gentoo.org> bcwipe-1.7_p2.ebuild:
  amd64/x86 stable, bug #207547

*bcwipe-1.7_p2 (26 Jan 2008)

  26 Jan 2008; Alon Bar-Lev <alonbl@gentoo.org> +bcwipe-1.7_p2.ebuild:
  Version bump, bug#207541, thanks to wschlich
