@@ -1,9 +1,8 @@
-AUX bcwipe-1.7_p7-build.patch 860 RMD160 d56958a5040cca80a79461c69011913f848dfbcd SHA1 c524531d2e6ad65ae4890bc4d89514814c1a0773 SHA256 d44d58c838fefae865c8e98d984aa0e8fb83503c945d7a72e58d1b70fe0969b6
 AUX bcwipe-1.9.1-fix_warnings.patch 806 RMD160 572a7bd289ccca3aadf1240a37fefe5822e8f057 SHA1 2907900f91df826d1c796c00908d23ebf88137a5 SHA256 f1db3d4c86053af5bece3b5af4de656d0a07539743f8ab9d66292d4b157f7d04
-DIST BCWipe-1.7-7.tar.gz 27174 RMD160 a92bd6f5c9a9ad477c873421272d19b8aadc13f9 SHA1 618d5866e93aca0495fc4d366aa966261d36937e SHA256 6581b4dd57c195c30dced675c51ac4469e4bc5d4cbef71bda8a287ee1fc6848b
 DIST BCWipe-1.9-1.tar.gz 100282 RMD160 5b608f432616da0f0447187be1b0080816698d03 SHA1 84de775f5fd4c93ee63eb1c837fe48574c87c869 SHA256 1358c5d29c56713baf1f4c25e13adfeeda556b0761a672b13a0a258262f4c418
+DIST BCWipe-1.9-3.tar.gz 100472 RMD160 4615d6b3758a014df9924cf0cfd419a12371f3f8 SHA1 97f866cfa8c05d5882686f6cdc42dead36571183 SHA256 5418fd2ed31d42dd26830914e6b096874c1233738630a9a8a8540d804159e558
 DIST BCWipe.doc.tgz 21218 RMD160 a38bb741c3aae7d849cc8035010644720434ac2b SHA1 a5240848e1fd3fc534aa0d62a76bb120f498fb1a SHA256 afa50bf8653bb6bee108f0ae8b3dc35d289dde3d5c513b7e9ae7fe373635df4f
-EBUILD bcwipe-1.7_p7.ebuild 1295 RMD160 702bd5ab55030d94c54188da69e21de2451f95ca SHA1 a69e4476baf8ec9743793d575187a2aa314d8adb SHA256 1248783cbe71e6dd4a6dda286bac252f7ada5361dd59e9e0e69fdd81bba34781
 EBUILD bcwipe-1.9.1.ebuild 1216 RMD160 0845bb3c5233b048f18007bd701c9c3b3581a40b SHA1 55b10c0d398cb483ecef1ca9db165a60de76241a SHA256 1f51be0b7137d74e845ed293ac78da2ce9e51c385dd78415d7b18b47b27fa6df
-MISC ChangeLog 4845 RMD160 58476f3c23da0e4532208634f124ca0dd2d3036e SHA1 3739d4757ceba4876b8e70cdadbb6eea039545fa SHA256 5dfa8e82da95c112c5f93d2754080da36988257e64f8838fe26e434a413f2ce2
+EBUILD bcwipe-1.9.3.ebuild 1230 RMD160 b5d3384ecabdd0e1691ca9191b58cef74ff4b012 SHA1 42ea360f49a4f22be9f565957022568da62452c9 SHA256 720e2d3cd5e7fe8a6d1a08ffa31a01aff1867bac46c98bbcfdf46755ae74a849
+MISC ChangeLog 4989 RMD160 4aac1c21f40da88ab6aed0326ed804d410a1a1b6 SHA1 f4bb095ef0e71e3ae33419ca063ef47329e6e437 SHA256 d3fd93217087cda967762b3bd38ce8e854f7f63a6cc37cc14750cdeb51e11646
 MISC metadata.xml 160 RMD160 61ea9f9370afee3db802f40f7c6b2edd2f5347cf SHA1 51cf29a3589cff823294704e225b0de18f65e6dd SHA256 7419f4e73ddd07284403525f1380824fc68280cad69e2dfae0645ad52b33ef10
