@@ -1,6 +1,12 @@
 # ChangeLog for app-crypt/bcwipe
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/bcwipe/ChangeLog,v 1.38 2009/06/02 17:03:04 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/bcwipe/ChangeLog,v 1.39 2009/11/07 19:11:57 arfrever Exp $
+
+*bcwipe-1.9.3 (07 Nov 2009)
+
+  07 Nov 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +bcwipe-1.9.3.ebuild:
+  Version bump.
 
   02 Jun 2009; Raúl Porcel <armin76@gentoo.org> bcwipe-1.9.1.ebuild:
   sparc stable wrt #271910
